--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lodash": "^4.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +22,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version"
